Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rare/Rare7.out
Rare7.java:19:13: compiler.err.non-static.cant.be.ref: kindname.class, rare7.A.B
1 error
